--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-微信接入示例应用
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>微信JS-API的认证的引入方式</title>
+</head>
+<body>
+
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script src="http://eat.avosapps.com/wxsign"></script>
+</body>
+</html>
