--- a/public/html/join.html
+++ b/public/html/join.html
@@ -1,1 +1,13 @@
-<h1>加入饭团</h1>
+<div class="s-join">
+    <div class="nav">
+        <a href="#/tuan/">&lt;</a>
+        <h1>入团</h1>
+    </div>
+    <section>
+        <input type="text" placeholder="输入团ID">
+    </section>
+    <section class="qrcode">
+        <img src="http://placehold.it/250X250" alt="">
+    </section>
+    <a href="javascript:;" class="btn confirm">确认</a>
+</div>
