--- a/public/html/join.html
+++ b/public/html/join.html
@@ -1,6 +1,6 @@
 <div class="s-join">
     <div class="nav">
-        <a href="#/tuan/">&lt;</a>
+        <a class="return" href="#/tuan/">&lt;</a>
         <h1>入团</h1>
     </div>
     <section>
