--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -1,7 +1,11 @@
-<a href="#/tuan/">返回</a>
-<ul>
-    <li><a href="#/tuan/{{tuanId}}/members">成员</a></li>
-    <li><a href="#/tuan/{{tuanId}}/home">首页</a></li>
-    <li><a href="#/tuan/{{tuanId}}/history">历史</a></li>
-</ul>
-<h1>饭团历史</h1>
+<div class="s-history">
+    <div class="nav">
+        <a class="return" href="#/tuan/">&lt;</a>
+        <ul>
+            <li><a href="#/tuan/{{tuanId}}/members">成员</a></li>
+            <li><a href="#/tuan/{{tuanId}}/home">首页</a></li>
+            <li><a href="#/tuan/{{tuanId}}/history">历史</a></li>
+        </ul>
+    </div>
+    <h1>饭团历史</h1>
+</div>
