--- a/public/html/tuanIndex.html
+++ b/public/html/tuanIndex.html
@@ -1,7 +1,21 @@
-<a href="#/tuan/">返回</a>
-<ul>
-    <li><a href="#/tuan/{{tuanId}}/members">成员</a></li>
-    <li><a href="#/tuan/{{tuanId}}/home">首页</a></li>
-    <li><a href="#/tuan/{{tuanId}}/history">历史</a></li>
-</ul>
-<h1>饭团首页</h1>
+<div class="s-index">
+    <div class="nav">
+        <a class="return" href="#/tuan/">&lt;</a>
+        <ul>
+            <li><a href="#/tuan/{{tuanId}}/members">成员</a></li>
+            <li><a href="#/tuan/{{tuanId}}/home">首页</a></li>
+            <li><a href="#/tuan/{{tuanId}}/history">历史</a></li>
+        </ul>
+    </div>
+    <label for="name">
+        饭团名：
+        <input type="text" placeholder="(二蛋团）随机生成的可重复团名">
+    </label>
+    <label for="id">
+        饭团ID：
+        <input type="text" placeholder="xxx(系统生成的唯一ID)">
+    </label>
+    <label for="broadcast">
+        <textarea name="broadcast" id="" cols="30" rows="10">口号：xxx (类似于群公告栏，可以随便填写一定长度文字。建团时系统可以配合团名随机打出一些有意思的口号。)</textarea>
+    </label>
+</div>
