--- a/public/html/join.html
+++ b/public/html/join.html
@@ -6,8 +6,9 @@
     <section>
         <input type="text" placeholder="输入团ID">
     </section>
-    <section class="qrcode">
-        <img src="http://placehold.it/250X250" alt="">
+    <section ng-click="startScan()" class="qrcode">
+        <h1>点击扫描二维码</h1>
+        <!-- <img src="http://placehold.it/250X250" alt=""> -->
     </section>
     <a href="javascript:;" class="btn confirm">确认</a>
 </div>
