--- a/public/html/create.html
+++ b/public/html/create.html
@@ -5,7 +5,7 @@
     </div>
     <label for="name">
         饭团名：
-        <input type="text" placeholder="(二蛋团）随机生成的可重复团名">
+        <input type="text" placeholder="(二蛋团）随机生成的可重复团名" value="{{name}}">
     </label>
     <label for="id">
         饭团ID：
