--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -10,13 +10,15 @@
     <h1>今天我买单</h1>
     <h2>聚餐团员：{{curTotal}} 人</h2>
     <div class="members">
-        <label ng-repeat="member in members" for="">
-            <input type="radio" ng-model="member.in">
+        <label ng-repeat="member in members">
+            <input type="checkbox" ng-change="change()" ng-model="member.inThis">
             {{member.name}}
         </label>
     </div>
-    <h2>非团员：<input type="text" placeholder="0" ng-model="notMember"></h2>
+    <h2>非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
 
     <h2>{{curTotal + notMember}}人共消费：<input type="text" placeholder="0" ng-model="totalMoney"></h2>
     <h2>人均：<span class="average">{{totalMoney/(curTotal + notMember)}}</span></h2>
+    <a href="javascript:;" ng-click="confirm()" class="btn confirm">确认</a>
+
 </div>
