--- a/public/html/tuanMembers.html
+++ b/public/html/tuanMembers.html
@@ -12,6 +12,7 @@
              ng-style={{data.div1}}>
             <div ng-style={{data.div2}} ng-click="click(data.name)">
                 {{data.name}}
+                <p>{{data.money}}</p>
             </div>
         </div>
     </div>
