--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -11,14 +11,15 @@
     <h2>聚餐团员：{{curTotal}} 人</h2>
     <div class="members">
         <label ng-repeat="member in members">
-            <input type="checkbox" ng-change="change()" ng-model="member.inThis">
+            <input type="checkbox" ng-change="changeMember()" ng-model="member.inThis">
             {{member.name}}
         </label>
     </div>
     <h2>非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
 
-    <h2>{{curTotal + notMember}}人共消费：<input type="text" placeholder="0" ng-model="totalMoney"></h2>
-    <h2>人均：<span class="average">{{totalMoney/(curTotal + notMember)}}</span></h2>
+    <h2>{{curTotal + notMember}}人共消费：<input type="text" placeholder="0" ng-model="totalMoney" >
+</h2>
+    <h2>人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkNaN}}</span></h2>
     <a href="javascript:;" ng-click="confirm()" class="btn confirm">确认</a>
 
 </div>
