--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -7,7 +7,7 @@
             <li><a href="#/tuan/{{tuanId}}/history">历史</a></li>
         </ul>
     </div>
-    <ul>
+    <ul class="history">
         <li ng-repeat="history in histories">
         {{history}}
         </li>
