--- a/public/html/list.html
+++ b/public/html/list.html
@@ -1,8 +1,8 @@
 <div>
     <div ng-repeat="data in list" class="tuan"
          ng-style={{data.div1}}>
-        <a href="#/tuan/{{data.id}}">
-            <div ng-style={{data.div2}} ng-click="click(data.name)">
+        <a href="javascript:;">
+            <div ng-style={{data.div2}} ng-click="click(data.id)">
                 {{data.name}}
             </div>
         </a>
