--- a/public/html/tuanIndex.html
+++ b/public/html/tuanIndex.html
@@ -16,8 +16,8 @@
             饭团ID：
             <input type="text" disabled="disabled" value="{{id}}" placeholder="xxx(系统生成的唯一ID)">
         </label>
-        <div id="qrcode" class="qrcode">
-            <img src="{{qrcode}}" alt=""/>
+        <div  class="qrcode">
+            <img id="qrcode" ng-src="{{qrcode}}" alt=""/>
         </div>
         <label for="broadcast">
             <textarea name="broadcast" ng-blur="save()" ng-model="slogan" value="{{slogan}}"  id="" cols="30" rows="10">{{slogan}}</textarea>
