--- a/cloud/dev_views/myet.html
+++ b/cloud/dev_views/myet.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>EatTogether</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="./css/base.css">
   <link rel="stylesheet" type="text/css" href="./css/tuan.css">
   <script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
