--- a/public/html/tuanIndex.html
+++ b/public/html/tuanIndex.html
@@ -1,12 +1,6 @@
 <div class="s-index">
-    <div class="nav">
-        <a class="return" href="#/tuan/">&lt;</a>
-        <ul>
-            <li><a href="#/tuan/{{tuanId}}/members">成员</a></li>
-            <li><a href="#/tuan/{{tuanId}}/home">首页</a></li>
-            <li><a href="#/tuan/{{tuanId}}/history">历史</a></li>
-        </ul>
-    </div>
+    <ng-include src="'./html/nav.html'"></ng-include>
+    <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
     <div ng-show="loaded">
         <label for="name">
             饭团名：
@@ -22,8 +16,6 @@
         <label for="broadcast">
             <textarea name="broadcast" ng-blur="save()" ng-model="slogan" value="{{slogan}}"  id="" cols="30" rows="10">{{slogan}}</textarea>
         </label>
-
+        <a href="javascript:;" ng-click="quit()" class="btn quit">退团</a>
     </div>
-    <a href="javascript:;" ng-click="quit()" class="quit">退团</a>
-    <div class="clear"></div>
 </div>
