--- a/public/html/tuanMembers.html
+++ b/public/html/tuanMembers.html
@@ -1,13 +1,7 @@
 <div class="s-members">
-     <div class="nav">
-        <a class="return" href="#/tuan/">&lt;</a>
-        <ul>
-            <li><a href="#/tuan/{{tuanId}}/members">成员</a></li>
-            <li><a href="#/tuan/{{tuanId}}/home">首页</a></li>
-            <li><a href="#/tuan/{{tuanId}}/history">历史</a></li>
-        </ul>
-    </div>
-    <div>
+    <ng-include src="'./html/nav.html'"></ng-include>
+    <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
+    <div ng-show="loaded">
         <div ng-repeat="member in list" class="member" ng-style="member.avatarBg">
             <p ng-style="member.moneyBgc">{{member.money}}</p>
         </div>
