--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -3,13 +3,44 @@
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
     <ul ng-show="loaded" class="history">
         <li ng-switch="history.type" ng-repeat="history in histories">
+        <!--
+             'CREATE': 1,            // 建团记录。date, username 创建 tuanname 团
+    'JOIN': 2,              // 入团记录。date, username 加入 tuanname 团
+    'QUIT': 3,              // 退团记录。date, username 退出 tuanname 团
+    'MODIFY_NAME': 5,       // 修改团名记录。date, fromname 团的团名被 username 修改为 toname
+    'BILL': 10,             // 消费记录。date, username 请大家(members.length 人)消费了 money
+    'REVERT_BILL': 11       // 已经撤销的消费记录。date, xxx 请大家消费了 xxx (已撤销) -->
+            <div ng-switch-when="1">
+                <span class="time">{{history.date}}</span>
+                <span class="who">{{history.data.username}}</span>创建<span class="tuan">{{history.data.tuanname}}</span>团
+            </div>
+            <div ng-switch-when="2">
+                <span class="time">{{history.date}}</span>
+                <span class="who">{{history.data.username}}</span>加入<span class="tuan">{{history.data.tuanname}}</span>团
+            </div>
+            <div ng-switch-when="3">
+                <span class="time">{{history.date}}</span>
+                <span class="who">{{history.data.username}}</span>退出<span class="tuan">{{history.data.tuanname}}</span>团
+            </div>
+            <div ng-switch-when="5">
+                <span class="time">{{history.date}}</span>
+                <span class="oldtuan">{{history.data.fromname}}</span>团的团名被
+                <span class="who">{{history.data.username}}</span>修改为
+                <span class="tuan">{{history.data.toname}}</span>
+            </div>
             <div ng-switch-when="10">
                 <span class="time">{{history.date}}</span>
-                <span class="who">{{history.data.username}}</span> 为
-                <span class="members-count">{{history.data.members.length}}</span>人付钱
+                <span class="who">{{history.data.username}}</span>请大家
+                <span class="members-count">{{history.data.members.length}}</span>人消费了
                 <span class="money">{{history.data.money}}</span> 元
             </div>
-            <div ng-switch-default>...</div>
+            <div ng-switch-when="11">
+                <span class="time">{{history.date}}</span>
+                <span class="who">{{history.data.username}}</span> 请大家
+                <span class="members-count">{{history.data.members.length}}</span>人消费了
+                <span class="money">{{history.data.money}}</span> 元（已撤销）
+            </div>
+            <div ng-switch-default></div>
         </li>
     </ul>
 </div>
