--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -24,21 +24,15 @@
             </div>
             <div ng-switch-when="5">
                 <span class="time">{{history.date}}</span>
-                <span class="oldtuan">{{history.data.fromname}}</span>团的团名被
-                <span class="who">{{history.data.username}}</span>修改为
-                <span class="tuan">{{history.data.toname}}</span>
+                <span class="oldtuan">{{history.data.fromname}}</span>团的团名被<span class="who">{{history.data.username}}</span>修改为<span class="tuan">{{history.data.toname}}</span>
             </div>
             <div ng-switch-when="10">
                 <span class="time">{{history.date}}</span>
-                <span class="who">{{history.data.username}}</span>请大家
-                <span class="members-count">{{history.data.members.length}}</span>人消费了
-                <span class="money">{{history.data.money}}</span> 元
+                <span class="who">{{history.data.username}}</span>请大家<span class="members-count">{{history.data.members.length}}</span>人消费了<span class="money">{{history.data.money}}</span> 元
             </div>
             <div ng-switch-when="11">
                 <span class="time">{{history.date}}</span>
-                <span class="who">{{history.data.username}}</span> 请大家
-                <span class="members-count">{{history.data.members.length}}</span>人消费了
-                <span class="money">{{history.data.money}}</span> 元（已撤销）
+                <span class="who">{{history.data.username}}</span> 请大家<span class="members-count">{{history.data.members.length}}</span>人消费了<span class="money">{{history.data.money}}</span> 元（已撤销）
             </div>
             <div ng-switch-default></div>
         </li>
