--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -2,9 +2,9 @@
     <h1>今天我买单</h1>
     <h2>聚餐团员：{{curTotal}} 人</h2>
     <div class="members">
-        <label ng-class="{choosen : member.inThis}" ng-repeat="member in members">
+        <label ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
             <input type="checkbox" ng-change="changeMember()" ng-model="member.inThis">
-            {{member.name}}
+            <p>{{member.name}}</p>
         </label>
     </div>
     <h2>非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
