--- a/public/html/list.html
+++ b/public/html/list.html
@@ -1,15 +1,15 @@
 <div class="s-list">
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
-
-    <div ng-show="loaded" ng-repeat="data in list" class="tuan">
-        <div ng-click="enterTuan(data.id)">
-            {{data.name}}
+    <div  ng-show="loaded" >
+        <div ng-repeat="data in list" class="tuan" ng-click="enterTuan(data.id)">
+                {{data.name}}
         </div>
-    </div>
-    <div class="index-nav">
-        <span class="self">
-            <!-- hello, <span></span> -->
-        </span>
-        <span class="create" ng-click="creatTuan()">建团</span>
+        <div class="index-nav">
+            <span class="menu"></span>
+            <span class="self">
+                <span class="user">{{user.nickname}}</span>共消费<span class="money">{{user.money}}</span>元
+            </span>
+            <span class="create" ng-click="creatTuan()">建团</span>
+        </div>
     </div>
 </div>
