--- a/public/html/tuanIndex.html
+++ b/public/html/tuanIndex.html
@@ -4,7 +4,7 @@
     <div ng-show="loaded">
         <label for="name">
             饭团名：
-            <input type="text" value="{{name}}" ng-blur="save()" ng-model="name" placeholder="(二蛋团）随机生成的可重复团名">
+            <input type="text" value="{{name}}" ng-blur="save()" ng-model="newName" placeholder="(二蛋团）随机生成的可重复团名">
         </label>
         <label for="id">
             饭团ID：
