--- a/cloud/dev_views/myet.html
+++ b/cloud/dev_views/myet.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="./css/tuan.css">
   <script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
   <script src="./lib/angular.min.js"></script>
+  <script src="./lib/angular-touch.js"></script>
   <script src="./lib/angular-route.min.js"></script>
   <script src="./js/eat.js"></script>
   <script src="./js/controllers.js"></script>
