--- a/public/html/list.html
+++ b/public/html/list.html
@@ -1,8 +1,9 @@
 <div class="s-list">
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
     <div  ng-show="loaded" >
-        <div ng-repeat="data in list" class="tuan" ng-click="enterTuan(data.id)">
-                {{data.name}}
+        <div ng-class="{shake : data.news !== 0 }" ng-style="{{data.animatDelayStyle}}" ng-repeat="data in list" class="tuan  animated infinite" ng-click="enterTuan(data)">
+            <span ng-show="data.news !== 0" class="new">{{data.news}}</span>
+            <span class="name">{{data.name}}</span>
         </div>
         <div class="index-nav">
             <span class="menu"></span>
