--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -12,6 +12,6 @@
     <h2>{{curTotal + notMember}}人共消费：<input type="text" placeholder="0" ng-model="totalMoney" >
 </h2>
     <h2>人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkNaN}}</span></h2>
-    <a href="javascript:;" ng-click="confirm()" class="btn confirm">确认</a>
+    <a href="javascript:;" ng-click="confirm()" class="circle-btn confirm">确认</a>
 
 </div>
