--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -4,13 +4,6 @@
     <ul ng-show="loaded" class="history">
         <li ng-class="{deleted : history.deleted}" ng-switch="history.type" ng-repeat="history in histories" ng-swipe-left="swipeLeft(history.enableRevert)" ng-swipe-right="swipeRight(history.enableRevert)" >
             <div ng-if="history.enableRevert" class="delete" ng-show="showDelete" ng-click="revert(history)">删除</div>
-        <!--
-             'CREATE': 1,            // 建团记录。date, username 创建 tuanname 团
-    'JOIN': 2,              // 入团记录。date, username 加入 tuanname 团
-    'QUIT': 3,              // 退团记录。date, username 退出 tuanname 团
-    'MODIFY_NAME': 5,       // 修改团名记录。date, fromname 团的团名被 username 修改为 toname
-    'BILL': 10,             // 消费记录。date, username 请大家(members.length 人)消费了 money
-    'REVERT_BILL': 11       // 已经撤销的消费记录。date, xxx 请大家消费了 xxx (已撤销) -->
             <div ng-switch-when="1">
                 <span class="time">{{history.date}}</span>
                 <span class="who">{{history.data.username}}</span>创建<span class="tuan">{{history.data.tuanname}}</span>团
@@ -29,7 +22,7 @@
             </div>
             <div ng-switch-when="10">
                 <span class="time">{{history.date}}</span>
-                <span class="who">{{history.data.username}}</span>请大家<span class="members-count">{{history.data.members.length}}</span>人消费了<span class="money">{{history.data.money}}</span> 元 <span ng-if="!history.included">(除我)</span>
+                <span class="who">{{history.data.username}}</span>请大家<span class="members-count">{{history.data.members.length + history.data.othersnum}}</span>人消费了<span class="money">{{history.data.money}}</span> 元 <span ng-if="!history.included">(除我)</span>
             </div>
             <div ng-switch-when="11">
                 <span class="time">{{history.date}}</span>
