--- a/public/html/tuanIndex.html
+++ b/public/html/tuanIndex.html
@@ -8,7 +8,7 @@
         </label>
         <label for="id">
             共消费：
-            <input type="text" disabled="disabled" value="{{money}}元" >
+            <span class="money">{{money}}元</span>
         </label>
         <div  class="qrcode">
             <img id="qrcode" ng-src="{{qrcode}}" alt=""/>
