--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -9,9 +9,9 @@
     </div>
     <h2>非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
 
-    <h2>{{curTotal + notMember}}人共消费：<input type="text" placeholder="0" ng-model="totalMoney" >
+    <h2>{{curTotal + notMember}}人共消费：<input type="number" placeholder="0" ng-model="totalMoney" >
 </h2>
-    <h2>人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkNaN}}</span></h2>
+    <h2>人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkFinite}}</span></h2>
     <a href="javascript:;" ng-click="confirm()" class="circle-btn confirm">确认</a>
 
 </div>
