--- a/public/html/list.html
+++ b/public/html/list.html
@@ -5,7 +5,7 @@
             <span ng-show="data.news !== 0" class="new">{{data.news}}</span>
             <span class="name">{{data.name}}</span>
         </div>
-        <span class="create circle-btn" ng-click="creatTuan()">建团</span>
+        <span class="create circle-btn circle-btn-right" ng-click="creatTuan()">建团</span>
         <div class="index-nav">
             <span class="menu"></span>
             <span class="self">
