--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -12,6 +12,7 @@
     <h2>{{curTotal + notMember}}人共消费：<input type="number" placeholder="0" ng-model="totalMoney" >
 </h2>
     <h2>人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkFinite}}</span></h2>
-    <a href="javascript:;" ng-click="confirm()" class="circle-btn confirm">确认</a>
+    <a href="javascript:;" ng-click="cancel()" class="circle-btn circle-btn-left cancel">取消</a>
+    <a href="javascript:;" ng-click="confirm()" class="circle-btn circle-btn-right confirm">确认</a>
 
 </div>
