--- a/public/html/tuanMembers.html
+++ b/public/html/tuanMembers.html
@@ -5,6 +5,6 @@
         <div ng-repeat="member in list" class="member" ng-style="member.avatarBg">
             <p ng-style="member.moneyBgc">{{member.money}}</p>
         </div>
-        <a href="javascript:;"   ng-click="bill()" class="circle-btn">买单</a>
+        <a href="javascript:;"   ng-click="bill()" class="circle-btn circle-btn-right">买单</a>
     </div>
 </div>
