--- a/public/html/tuanIndex.html
+++ b/public/html/tuanIndex.html
@@ -15,7 +15,7 @@
         </div>
         <label for="broadcast">
             饭团口号：
-            <textarea name="broadcast" ng-blur="save()" ng-model="slogan" value="{{slogan}}"  id="" cols="30" rows="10">{{slogan}}</textarea>
+            <textarea name="broadcast" ng-model="newSlogan" value="{{slogan}}"  id="" cols="30" rows="10">{{slogan}}</textarea>
         </label>
         <a href="javascript:;" ng-click="quit()" class="circle-btn circle-btn-left quit">退团</a>
         <a href="javascript:;" ng-click="save()" class="circle-btn circle-btn-right quit">确认</a>
