--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -1,5 +1,10 @@
 <div class="s-bill">
     <h1>今天我买单</h1>
+    <h2>
+        <label for="mode">
+            <input type="checkbox" id="mode" name="mode" ng-model="abMode">众筹模式
+        </label>
+    </h2>
     <h2>聚餐团员：{{curTotal}} 人</h2>
     <div class="members">
         <label ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
@@ -7,11 +12,11 @@
             <p>{{member.name}}</p>
         </label>
     </div>
-    <h2>非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
+    <h2 ng-show="!abMode">非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
 
     <h2>{{curTotal + notMember}}人共消费：<input type="number" placeholder="0" ng-model="totalMoney" >
 </h2>
-    <h2>人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkFinite}}</span></h2>
+    <h2 ng-show="!abMode">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkFinite}}</span></h2>
     <a href="javascript:;" ng-click="cancel()" class="circle-btn circle-btn-left cancel">取消</a>
     <a href="javascript:;" ng-click="confirm()" class="circle-btn circle-btn-right confirm">确认</a>
 
