--- a/public/html/tuanHistory.html
+++ b/public/html/tuanHistory.html
@@ -2,6 +2,18 @@
     <ng-include src="'./html/nav.html'"></ng-include>
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
     <ul ng-show="loaded" class="history">
+        <!--    'CREATE': 1,            // 建团记录。date, username 创建 tuanname 团
+                'JOIN': 2,              // 入团记录。date, username 加入 tuanname 团
+                'QUIT': 3,              // 退团记录。date, username 退出 tuanname 团
+                'MODIFY_NAME': 5,       // 修改团名记录。date, fromname 团的团名被 username 修改为 toname
+                'BILL': 10,             // 消费记录。date, username 请大家(members.length+othersnum 人)消费了 money
+                'REVERT_BILL': 11,      // 已经撤销的消费记录。date, xxx 请大家消费了 xxx (已撤销)
+                'ABUP_BILL': 12,        // 正在进行的ABUp消费。date, username 发起了一次(members.length 人)筹款消费
+                'FINISH_ABUP': 13,      // 结束的ABUp消费。date, username 发起的筹款消费已结束
+                'REVERT_ABUP': 14,      // 撤销的ABUp消费。date, username 发起了筹款消费 (已撤销)
+                'ABDOWN_BILL': 16,      // 正在进行的ABDown消费
+                'FINISH_ABDOWN': 17,    // 结束的ABDown消费
+                'REVERT_ABDOWN': 18     // 撤销的ABDown消费-->
         <li ng-class="{deleted : history.deleted}" ng-switch="history.type" ng-repeat="history in histories" ng-swipe-left="swipeLeft(history.enableRevert)" ng-swipe-right="swipeRight(history.enableRevert)" >
             <div ng-if="history.enableRevert" class="delete" ng-show="showDelete" ng-click="revert(history)">删除</div>
             <div ng-switch-when="1">
@@ -30,7 +42,15 @@
             </div>
             <div ng-click="goDetail(history.id)" ng-switch-when="12">
                 <span class="time">{{history.date}}</span>
-                <span class="who">{{history.data.username}}</span> 请大家<span class="members-count">{{history.data.members.length}}</span>人消费了<span class="money">{{history.data.money}}</span> 元
+                <span class="who">{{history.data.username}}</span> 发起了一次<span class="members-count">{{history.data.members.length}}</span>人筹款消费
+            </div>
+            <div ng-click="goDetail(history.id)" ng-switch-when="13">
+                <span class="time">{{history.date}}</span>
+                <span class="who">{{history.data.username}}</span>  发起的筹款消费已结束
+            </div>
+            <div ng-click="goDetail(history.id)" ng-switch-when="14">
+                <span class="time">{{history.date}}</span>
+                <span class="who">{{history.data.username}}</span>发起了筹款消费 (已撤销)
             </div>
             <div ng-switch-default></div>
         </li>
