--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -12,6 +12,6 @@
         </div>
         <h2>众筹完成百分比：{{percent * 100 + '%'}}</h2>
         <span class="process-bar"><span class="inner" ng-style="processbarStyle"><span class="sum">{{sum}}</span></span></span>
-        <span class="circle-btn circle-btn-right cancel" ng-click="cancelAbBill(historyDetail.id)">结束筹款</span>
+        <span class="circle-btn circle-btn-right cancel" ng-click="cancelAbBill()">结束筹款</span>
     </div>
 </div>
