--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -2,16 +2,16 @@
     <ng-include src="'./html/nav.html'"></ng-include>
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
     <div class="history-view" ng-show="loaded">
-        <h1>今天我买单<span ng-show="closed">(已完成)</span></h1>
+        <h1>今天我买单<span ng-show="type == 13">(已完成)</span><span ng-show="type == 14">(已撤销)</span></h1>
         <h2>聚餐日期：{{date}}</h2>
         <div class="members">
-            <label ng-style="member.avatarBg"  ng-repeat="member in members">
-                <input type="checkbox" ng-change="changeMember()" ng-model="member.inThis">
+            <label ng-class="{paid : member.money != 0}" ng-style="member.avatarBg"  ng-repeat="member in members">
                 <p>{{member.money}}</p>
             </label>
         </div>
+        <h2 ng-show="money">筹款目标：{{money}} 元</h2>
         <h2>筹款完成百分比：{{percent * 100 + '%'}}</h2>
-        <span class="process-bar"><span class="inner" ng-style="processbarStyle"><span ng-show="sum !== 0" class="sum">{{sum}}</span></span><span ng-style="processbarStyleTotal" class="total">{{(money - sum > 0) ? money - sum : ''}}</span></span>
-        <span class="circle-btn circle-btn-right cancel" ng-show="!closed" ng-click="cancelAbBill()">结束筹款</span>
+        <span class="process-bar"><span class="inner" ng-style="processbarStyle"><span ng-show="sum !== 0" class="sum">已筹{{sum}}元</span></span><span ng-style="processbarStyleTotal" class="total">还差{{(money - sum > 0) ? money - sum : ''}}元</span></span>
+        <span class="circle-btn circle-btn-right cancel" ng-show="type == 12" ng-click="cancelAbBill()">结束筹款</span>
     </div>
 </div>
