--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -2,16 +2,53 @@
     <ng-include src="'./html/nav.html'"></ng-include>
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
     <div class="history-view" ng-show="loaded">
-        <h1>今天我买单<span ng-show="type == 13">(已完成)</span><span ng-show="type == 14">(已撤销)</span></h1>
-        <h2 class="date">{{date}}</h2>
-        <div class="members">
-            <label ng-class="{paid : member.money != 0}" ng-style="member.avatarBg"  ng-repeat="member in members">
-                <p>{{member.money}}</p>
-            </label>
+        <div class="mode-normal" ng-if="type < 12">
+      <!--   {
+  "id": "55051436e4b0707125f971ce",
+  "type": 11,
+  "date": "2015-03-15",
+  "money": 10,
+  "members": [
+    {
+      "uid": "54fe965ae4b0c1114a3bdac4",
+      "name": "程慕",
+      "sex": 2,
+      "headimgurl": "http://wx.qlogo.cn/mmopen/FKPRbO8OqNmMqQVPUUkvINRLQkysK3kGOzdG2OFZmVibOWicwtvM1wmfNkELgQEZvfWibtnnMictBrCuYzD0LoeuV7o3BbmEt6aM/132"
+    },
+    {
+      "uid": "54fea994e4b0a9c25c9fe2e8",
+      "name": "Zavatar",
+      "sex": 1,
+      "headimgurl": "http://wx.qlogo.cn/mmopen/Q3auHgzwzM6jGL4WmRxOqKibm75jmZs6twHxw6Q2P0LnWzWTQrBYkJfsibb3GMNVJRpachFqzI9ibicPHcQaRXlxNg/132"
+    }
+  ]
+} -->
+            <h1>今天我买单</h1>
+            <h2 class="date">{{date}}</h2>
+            <h2>聚餐团员：{{members.length}} 人</h2>
+            <div class="members">
+                <label ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
+                    <p>{{member.name}}</p>
+                </label>
+            </div>
+            <h2 >非团员：<span>{{notMember}}</span>人</h2>
+            <h2>{{member.length + notMember}}人共消费：
+                <span>{{money}}</span>
+            </h2>
+            <h2>人均：<span class="average">{{money/(members.length + notMember) | checkFinite}}</span></h2>
         </div>
-        <h2 ng-show="money">筹款目标：{{money}} 元</h2>
-        <h2>筹款完成百分比：{{percent * 100 + '%'}}</h2>
-        <span class="process-bar"><span class="inner" ng-style="processbarStyle"><span ng-show="sum !== 0" class="sum">已筹{{sum}}元</span></span><span ng-style="processbarStyleTotal" class="total">{{(money - sum > 0) ? ('还差' + (money - sum) + '元') : ''}}</span></span>
-        <span class="circle-btn circle-btn-right cancel" ng-show="type == 12" ng-click="cancelAbBill()">结束筹款</span>
+        <div class="mode-abup" ng-if="type > 12">
+            <h1>今天我买单<span ng-show="type == 13">(已完成)</span><span ng-show="type == 14">(已撤销)</span></h1>
+            <h2 class="date">{{date}}</h2>
+            <div class="members">
+                <label ng-class="{paid : member.money != 0}" ng-style="member.avatarBg"  ng-repeat="member in members">
+                    <p>{{member.money}}</p>
+                </label>
+            </div>
+            <h2 ng-show="money">筹款目标：{{money}} 元</h2>
+            <h2>筹款完成百分比：{{percent * 100 + '%'}}</h2>
+            <span class="process-bar"><span class="inner" ng-style="processbarStyle"><span ng-show="sum !== 0" class="sum">已筹{{sum}}元</span></span><span ng-style="processbarStyleTotal" class="total">{{(money - sum > 0) ? ('还差' + (money - sum) + '元') : ''}}</span></span>
+            <span class="circle-btn circle-btn-right cancel" ng-show="type == 12" ng-click="cancelAbBill()">结束筹款</span>
+        </div>
     </div>
 </div>
