--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -3,39 +3,19 @@
     <ng-include ng-show="!loaded" src="'./html/loading.html'"></ng-include>
     <div class="history-view" ng-show="loaded">
         <div class="mode-normal" ng-if="type < 12">
-      <!--   {
-  "id": "55051436e4b0707125f971ce",
-  "type": 11,
-  "date": "2015-03-15",
-  "money": 10,
-  "members": [
-    {
-      "uid": "54fe965ae4b0c1114a3bdac4",
-      "name": "程慕",
-      "sex": 2,
-      "headimgurl": "http://wx.qlogo.cn/mmopen/FKPRbO8OqNmMqQVPUUkvINRLQkysK3kGOzdG2OFZmVibOWicwtvM1wmfNkELgQEZvfWibtnnMictBrCuYzD0LoeuV7o3BbmEt6aM/132"
-    },
-    {
-      "uid": "54fea994e4b0a9c25c9fe2e8",
-      "name": "Zavatar",
-      "sex": 1,
-      "headimgurl": "http://wx.qlogo.cn/mmopen/Q3auHgzwzM6jGL4WmRxOqKibm75jmZs6twHxw6Q2P0LnWzWTQrBYkJfsibb3GMNVJRpachFqzI9ibicPHcQaRXlxNg/132"
-    }
-  ]
-} -->
-            <h1>今天我买单</h1>
+            <h1>今天我买单<span ng-show="type == 11">(已撤销)</span></h1>
             <h2 class="date">{{date}}</h2>
             <h2>聚餐团员：{{members.length}} 人</h2>
             <div class="members">
-                <label ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
+                <label ng-style="member.avatarBg" ng-repeat="member in members">
                     <p>{{member.name}}</p>
                 </label>
             </div>
-            <h2 >非团员：<span>{{notMember}}</span>人</h2>
-            <h2>{{member.length + notMember}}人共消费：
+            <h2 >非团员：<span>{{othersnum}}</span>人</h2>
+            <h2>{{members.length + othersnum}}人共消费：
                 <span>{{money}}</span>
             </h2>
-            <h2>人均：<span class="average">{{money/(members.length + notMember) | checkFinite}}</span></h2>
+            <h2>人均：<span class="average">{{money/(members.length + othersnum) | checkFinite}}</span></h2>
         </div>
         <div class="mode-abup" ng-if="type > 12">
             <h1>今天我买单<span ng-show="type == 13">(已完成)</span><span ng-show="type == 14">(已撤销)</span></h1>
