--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -1,27 +1,30 @@
 <div class="s-bill">
-    <h1>今天我买单</h1>
-    <h2>
-        <label for="mode">
-            <input type="checkbox" id="mode" name="mode" ng-model="abMode">筹款模式
-        </label>
-    </h2>
-    <h2>聚餐团员：{{curTotal}} 人</h2>
-    <div class="members">
-        <label ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
-            <input type="checkbox" ng-change="changeMember()" ng-model="member.inThis">
-            <p>{{member.name}}</p>
-        </label>
-    </div>
-    <h2 ng-show="!abMode">非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
-    <h2>{{curTotal + notMember}}人共消费：
-        <input type="number" placeholder="0" ng-model="totalMoney" >
-        <span class="tips" ng-show="abMode" ng-click="abModeTipShow = !abModeTipShow">?</span>
-        <div class="tip-panel" ng-show="abModeTipShow">
-            筹款模式下"总消费"金额选填。不填时当所有人都已付款则自动结束筹款，不验证筹款总额。
+    <ng-include src="'./html/nav.html'"></ng-include>
+    <div class="bill">
+        <h1>今天我买单</h1>
+        <h2>
+            <label for="mode">
+                <input type="checkbox" id="mode" name="mode" ng-model="abMode">筹款模式
+            </label>
+        </h2>
+        <h2>聚餐团员：{{curTotal}} 人</h2>
+        <div class="members">
+            <label ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
+                <input type="checkbox" ng-change="changeMember()" ng-model="member.inThis">
+                <p>{{member.name}}</p>
+            </label>
         </div>
-    </h2>
-    <h2 ng-show="!abMode">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkFinite}}</span></h2>
-    <a href="javascript:;" ng-click="cancel()" class="circle-btn circle-btn-left cancel">取消</a>
-    <a href="javascript:;" ng-click="confirm()" class="circle-btn circle-btn-right confirm">确认</a>
+        <h2 ng-show="!abMode">非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
+        <h2>{{curTotal + notMember}}人共消费：
+            <input type="number" placeholder="0" ng-model="totalMoney" >
+            <span class="tips" ng-show="abMode" ng-click="abModeTipShow = !abModeTipShow">?</span>
+            <div class="tip-panel" ng-show="abModeTipShow">
+                筹款模式下"总消费"金额选填。不填时当所有人都已付款则自动结束筹款，不验证筹款总额。
+            </div>
+        </h2>
+        <h2 ng-show="!abMode">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkFinite}}</span></h2>
+        <a href="javascript:;" ng-click="cancel()" class="circle-btn circle-btn-left cancel">取消</a>
+        <a href="javascript:;" ng-click="confirm()" class="circle-btn circle-btn-right confirm">确认</a>
+    </div>
 
 </div>
