--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -4,6 +4,6 @@
         <li ng-class="{cur : column === 1 }" class="me"><a href="#/tuan/">我</a></li>
         <li ng-class="{cur : column === 2 }"><a href="#/tuan/{{tuanId}}/members">成员</a></li>
         <li ng-class="{cur : column === 4 }"><a href="#/tuan/{{tuanId}}/history">历史</a></li>
-        <li ng-class="{cur : column === 3 }"><a href="#/tuan/{{tuanId}}/home">分享</a></li>
+        <li ng-class="{cur : column === 3 }"><a href="#/tuan/{{tuanId}}/home">设置</a></li>
     </ul>
 </div>
