--- a/public/html/list.html
+++ b/public/html/list.html
@@ -8,7 +8,8 @@
         <div class="index-nav">
             <span class="menu"></span>
             <span class="self">
-                <span class="user">{{user.nickname}}</span>共消费<span class="money">{{user.money}}</span>元
+                <input type="text" ng-blur="saveNewName()" ng-show="modName" value="user.nickname" ng-model="user.newNickname"/>
+                <span class="user" ng-show="!modName" ng-click="modName = !modName">{{user.nickname}}</span>共消费<span class="money">{{user.money}}</span>元
             </span>
             <span class="create" ng-click="creatTuan()">建团</span>
         </div>
