--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -7,7 +7,7 @@
                 <input type="checkbox" id="mode" name="mode" ng-model="abMode">筹款模式
             </label>
         </h2>
-        <h2>聚餐团员：{{curTotal}} 人</h2>
+        <h2>聚餐团员：{{curTotal}} 人 <label for="all"><input ng-click="selectAll()" type="checkbox" id="all" ng-model="all"/>全选</label></h2>
         <div class="members">
             <label ng-style="member.avatarBg" ng-class="{choosen : member.inThis}" ng-repeat="member in members">
                 <input type="checkbox" ng-change="changeMember()" ng-model="member.inThis">
@@ -16,15 +16,14 @@
         </div>
         <h2 ng-show="!abMode">非团员：<input type="number" placeholder="0" ng-model="notMember"></h2>
         <h2>{{curTotal + notMember}}人共消费：
-            <input type="number" placeholder="0" ng-model="totalMoney" >
+            <input type="number" placeholder="输入买单金额" ng-model="totalMoney" >
             <span class="tips" ng-show="abMode" ng-click="abModeTipShow = !abModeTipShow">?</span>
             <div class="tip-panel" ng-show="abModeTipShow">
                 筹款模式下"总消费"金额选填。不填时当所有人都已付款则自动结束筹款，不验证筹款总额。
             </div>
         </h2>
-        <h2 ng-show="!abMode">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkFinite}}</span></h2>
-        <a href="javascript:;" ng-click="cancel()" class="circle-btn circle-btn-left cancel">取消</a>
-        <a href="javascript:;" ng-click="confirm()" class="circle-btn circle-btn-right confirm">确认</a>
+        <h2 ng-show="!abMode">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkAverage}}</span></h2>
+        <a href="javascript:;" ng-click="confirm()" class="btn warn confirm">确认</a>
     </div>
 
 </div>
