--- a/public/html/tuanHistoryDetail.html
+++ b/public/html/tuanHistoryDetail.html
@@ -15,7 +15,7 @@
             <h2>{{members.length + othersnum}}人共消费：
                 <span>{{money}}</span>
             </h2>
-            <h2>人均：<span class="average">{{money/(members.length + othersnum) | checkFinite}}</span></h2>
+            <h2>人均：<span class="average">{{money/(members.length + othersnum) | checkAverage}}</span></h2>
         </div>
         <div class="mode-abup" ng-if="type > 11">
             <h1>今天我买单<span ng-show="type == 13">(已完成)</span><span ng-show="type == 14">(已撤销)</span></h1>
