--- a/public/html/tuanBill.html
+++ b/public/html/tuanBill.html
@@ -23,7 +23,7 @@
             </div>
         </h2>
         <h2 ng-show="!abMode">人均：<span class="average">{{totalMoney/(curTotal + notMember) | checkAverage}}</span></h2>
-        <a href="javascript:;" ng-click="confirm()" class="btn warn confirm">确认</a>
+        <a href="javascript:;" ng-click="confirm()" class="btn-s warn confirm">确认</a>
     </div>
 
 </div>
