--- a/public/html/tuanIndex.html
+++ b/public/html/tuanIndex.html
@@ -17,6 +17,6 @@
             团口号：
             <textarea ng-blur="save()" name="broadcast" ng-model="newSlogan" value="{{slogan}}"  id="" cols="30" rows="10">{{slogan}}</textarea>
         </label>
-        <a href="javascript:;" ng-click="quit()" class="btn warn quit">退团</a>
+        <a href="javascript:;" ng-click="quit()" class="btn-s warn quit">退团</a>
     </div>
 </div>
