--- a/public/html/modals/setMoney.html
+++ b/public/html/modals/setMoney.html
@@ -2,9 +2,12 @@
     <h3 class="modal-title">输入该成员费用！</h3>
 </div>
 <div class="modal-body">
-    <input type="text" ng-model="moneySpent"/>
+    <form name="form">
+        <input type="number" name="moneySpent" min="0" max="500" required ng-model="moneySpent" />
+    </form>
+    <span  ng-show="form.moneySpent.$error.number || form.moneySpent.$error.max || form.moneySpent.$error.min">请输入0~500的数值</span>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok($scope.moneySpent)">OK</button>
+    <button class="btn btn-primary" ng-disabled="!form.moneySpent.$valid" ng-click="ok($scope.moneySpent)">OK</button>
     <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
 </div>
